Adding Bearer Token validation